tests/NormalTests/paczka1/fuzzy1/83336696.err
Error in line 1: lIXdIQe S775 27,7
Error in line 10: UNbj2Jy96 S1 49,2
Error in line 16: UNbj2Jy96 S775 87,1
Error in line 29: UNbj2Jy96 A871 86,2
Error in line 34: 7jdH S1 7,6
